setting up varcell

--- a/Algorithm-visualizer/mainwindow.ui
+++ b/Algorithm-visualizer/mainwindow.ui
@@ -25,7 +25,18 @@
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
-      <widget class="VarCell" name="VarCell" native="true"/>
+      <widget class="VarCell" name="VarCell" native="true">
+       <widget class="varcell" name="graphicsView">
+        <property name="geometry">
+         <rect>
+          <x>5</x>
+          <y>0</y>
+          <width>371</width>
+          <height>231</height>
+         </rect>
+        </property>
+       </widget>
+      </widget>
      </item>
      <item row="0" column="0">
       <widget class="Viewer" name="Viewer" native="true"/>
@@ -76,6 +87,11 @@
    <extends>QWidget</extends>
    <header location="global">varcell.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>varcell</class>
+   <extends>QGraphicsView</extends>
+   <header location="global">varcell.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
