--- a/Algorithm-visualizer/mainwindow.ui
+++ b/Algorithm-visualizer/mainwindow.ui
@@ -63,6 +63,14 @@
            <height>50</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>Verdana</family>
+           <pointsize>18</pointsize>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
+         </property>
          <property name="styleSheet">
           <string notr="true">QPushButton {
 	border-radius: 25px;
@@ -92,6 +100,15 @@ QPushButton:clicked {
            <width>0</width>
            <height>50</height>
           </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Verdana</family>
+           <pointsize>18</pointsize>
+           <weight>50</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
          </property>
          <property name="styleSheet">
           <string notr="true">QPushButton {
