--- a/Algorithm-visualizer/mainwindow.ui
+++ b/Algorithm-visualizer/mainwindow.ui
@@ -74,13 +74,13 @@
          <property name="styleSheet">
           <string notr="true">QPushButton {
 	border-radius: 25px;
-	background-color: rgb(84, 210, 255);
-	color : rgb(35, 18, 255);
+	background-color: rgb(107, 142, 183);
+	color : rgb(0,0,0);
 }
 
 
 QPushButton:hover{
-	background-color: rgb(155, 231, 255);
+	background-color: rgb(188, 211, 231);
 }
 
 
@@ -113,13 +113,13 @@ QPushButton:clicked {
          <property name="styleSheet">
           <string notr="true">QPushButton {
 	border-radius: 25px;
-	background-color: rgb(84, 210, 255);
-	color : rgb(35, 18, 255);
+	background-color: rgb(107, 142, 183);
+	color : rgb(0,0,0);
 }
 
 
 QPushButton:hover{
-	background-color: rgb(155, 231, 255);
+	background-color: rgb(188, 211, 231);
 }
 
 
