--- a/Algorithm-visualizer/mainwindow.ui
+++ b/Algorithm-visualizer/mainwindow.ui
@@ -89,42 +89,6 @@ QPushButton:clicked {
            <string>Done with code</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="Upload">
-          <property name="geometry">
-           <rect>
-            <x>290</x>
-            <y>600</y>
-            <width>121</width>
-            <height>32</height>
-           </rect>
-          </property>
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QPushButton {
-	border-radius: 30px;
-	background-color: rgb(107, 142, 183);
-	color : rgb(0,0,0);
-}
-
-
-QPushButton:hover{
-	background-color: rgb(188, 211, 231);
-}
-
-
-QPushButton:clicked {
-	color: rgb(241, 255, 253);
-}</string>
-          </property>
-          <property name="text">
-           <string>Upload .cpp file</string>
-          </property>
-         </widget>
         </widget>
        </item>
        <item>
@@ -215,7 +179,7 @@ QPushButton:clicked {
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
-         <widget class="QWidget" name="">
+         <widget class="QWidget" name="layoutWidget">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -227,6 +191,23 @@ QPushButton:clicked {
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
             <widget class="QPushButton" name="pushButton_2">
+             <property name="styleSheet">
+              <string notr="true">QPushButton {
+	border-radius: 25px;
+	background-color: rgb(107, 142, 183);
+	color : rgb(0,0,0);
+}
+
+
+QPushButton:hover{
+	background-color: rgb(188, 211, 231);
+}
+
+
+QPushButton:clicked {
+	color: rgb(241, 255, 253);
+}</string>
+             </property>
              <property name="text">
               <string>Zoom In</string>
              </property>
@@ -236,7 +217,19 @@ QPushButton:clicked {
             <widget class="QPushButton" name="pushButton">
              <property name="styleSheet">
               <string notr="true">QPushButton {
-	background: url(&quot;/GUI/Icons/zoom+.png&quot;);
+	border-radius: 25px;
+	background-color: rgb(107, 142, 183);
+	color : rgb(0,0,0);
+}
+
+
+QPushButton:hover{
+	background-color: rgb(188, 211, 231);
+}
+
+
+QPushButton:clicked {
+	color: rgb(241, 255, 253);
 }</string>
              </property>
              <property name="text">
